--- a/frontend/index.html
+++ b/frontend/index.html
@@ -17,8 +17,8 @@
     <meta name="twitter:site" content="@fixfly" />
 
     <!-- Favicon -->
-    <link rel="icon" type="image/png" href="/image.png" />
-    <link rel="apple-touch-icon" href="/image.png" />
+    <link rel="icon" type="image/png" href="/loginFixflylogo.png?v=2" />
+    <link rel="apple-touch-icon" href="/loginFixflylogo.png?v=2" />
     
     <!-- PWA Manifest -->
     <link rel="manifest" href="/manifest.json" />
