--- a/frontend/public/offline.html
+++ b/frontend/public/offline.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" href="./loginFixflylogo.png?v=2" type="image/png">
     <title>FixFly - Offline</title>
     <style>
         body {
