meta tag updated

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -2,8 +2,8 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <title>FixFly - Professional IT & Electronics Repair Services</title>
-    <meta name="description" content="Professional laptop, desktop, Mac, and electronics repair services. Certified technicians, fast turnaround, and guaranteed quality repairs." />
+    <title>Fixfly™ | India's Most Trusted Laptop, IT & Home Appliance Doorstep Service App</title>
+    <meta name="description" content="Fixfly™ is India's #1 and most trusted laptop repair, computer repair & IT service provider with doorstep home appliance repair like AC Repar | TV Repair | fridge Repair | washing machine service. Book expert technicians instantly anywhere in India." />
     <meta name="author" content="FixFly" />
     <meta name="keywords" content="laptop repair, desktop repair, Mac repair, electronics repair, IT services, computer repair, phone repair, CCTV installation" />
 
@@ -15,10 +15,12 @@
     <!-- Twitter Card -->
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:site" content="@fixfly" />
+    <meta name="twitter:title" content="Fixfly™ | India's Most Trusted Laptop, IT & Home Appliance Doorstep Service App" />
+    <meta name="twitter:description" content="Fixfly™ is India's #1 and most trusted laptop repair, computer repair & IT service provider with doorstep home appliance repair like AC Repar | TV Repair | fridge Repair | washing machine service. Book expert technicians instantly anywhere in India." />
 
     <!-- Favicon -->
-    <link rel="icon" type="image/png" href="/loginFixflylogo.png?v=2" />
-    <link rel="apple-touch-icon" href="/loginFixflylogo.png?v=2" />
+    <link rel="icon" type="image/png" href="/loginFixflylogo.png?v=3" />
+    <link rel="apple-touch-icon" href="/loginFixflylogo.png?v=3" />
     
     <!-- PWA Manifest -->
     <link rel="manifest" href="/manifest.json" />
